[package]
name = "topt"
version = "0.1.0"
authors = ["paul <paul@cueb.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "0.2.36"
data-encoding = "2.1.2"
qrcode = { git = "https://github.com/kennytm/qrcode-rust", commit="6fe4b5232984eec77e9680c8d52f2e1abaf2bebe" }
